@@ -246,69 +246,59 @@ Here is the code for creating our indexer:
 	AutoPtr&lt;OmIndexer&gt; indexer = builder.build_from_file(&quot;indexfile.xml&quot;);
 </PRE>
 
-<!-- FIXME: below is still from the original quickstart.html -->
-<H3>Preparing the new document</H3>
+<H3>Indexing the file</H3>
 
 <P>
-Now that we have the database open, we need to prepare a document to put
-in it.  This is done by creating an OmDocumentContents struct, filling
-this with data, and then giving it to the database.
+Now that we've built the indexer, we can index the file.  The example
+indexer is set up to take a filename as input.  All we need to is to
+supply the filename, and read the output.  The input is specified in
+an OmIndexerMessage, which is the message used internally in the
+indexer.  Here's the code fragment which does that:
 </P>
 
+<PRE>
+	OmIndexerMessage filename(new OmIndexerData(argv[2]));
+	indexer-&gt;set_input(filename);
+	OmDocumentContents newdocument = indexer-&gt;get_output();
+</PRE>
+
+<H3>Displaying the document data</H3>
+
 <P>
-The first step, then, is to create the document:
+So that we can see what the indexer actually produced, we print out
+the data stored in the <CODE>OmDocumentContents</CODE> object.
+First we print out the data field:
 </P>
 <PRE>
-    OmDocumentContents newdocument;
+	cout &lt;&lt; &quot;Document data: &quot; &lt;&lt; newdocument.data.value &lt;&lt; endl;
+</PRE>
+<P>
+Next, we print out the keys.  The keys are stored in an STL <CODE>map</CODE>,
+so we enumerate the values using an iterator:
+</P>
+<PRE>
+	cout &lt;&lt; &quot;Document keys: &quot; &lt;&lt; endl;
+	for (OmDocumentContents::document_keys::const_iterator i =
+	     newdocument.keys.begin();
+	     i != newdocument.keys.end();
+	     ++i) {
+	    cout &lt;&lt; &quot;\t&quot; &lt;&lt; i-&gt;first &lt;&lt; &quot;\t&quot; &lt;&lt; i-&gt;second &lt;&lt; endl;
+	}
 </PRE>
 
 <P>
-Next, we associate some data with the document.  The meaning of this data
-is entirely user-defined, and is typically structured in some manner to
-contain information such as a URL pointing to the source of the data, and
-some text which is to be displayed when returning the document as a result
-of a search.
-</P>
-<P>
-For our example, we shall simply store the second parameter given on the
-command line in the data field:
-</P>
-<PRE>
-    newdocument.data = string(argv[2]);
-</PRE>
-
-<P>
-The next step is to put the terms which are to be used when searching for
-the document into the OmDocumentContents struct.
-The members of the OmDocumentContents struct are all public, so can be
-accessed directly, but there are also some convenience methods to help
-with the process of filling the struct.
-</P>
-<P>
-We shall use the <CODE>add_posting()</CODE> method, which adds an
-occurrence of a term to the struct.  The first parameter is the
-&quot;<EM>termname</EM>&quot;, which is a string defining the term.  This
-string can be anything, as long as the same string is always used to refer
-to the same term.  The string will often be the (possibly stemmed) text
-of the term, but might be in a compressed, or even hashed, form.
-In general, there is no upper limit to the length of a termname, but some
-database methods may impose their own limits.
-</P>
-<P>
-The second parameter is the position at which the term occurs within the
-document.  These positions start at 1.  This information is used for
-some search features such as phrase matching or passage retrieval, but
-is not essential to the search.
+Finally, we print out the document terms.  This is very similar to printing
+out the keys.
 </P>
 
-<P>
-We add postings for terms with the termname given as each of the remaining
-command line parameters:
-</P>
 <PRE>
-    for(int i = 3; i &lt; argc; i++) {
-        newdocument.add_posting(argv[i], i - 2);
-    }
+	cout &lt;&lt; &quot;Document terms: &quot; &lt;&lt; endl;
+	for (OmDocumentContents::document_terms::const_iterator i =
+	     newdocument.terms.begin();
+	     i != newdocument.terms.end();
+	     ++i) {
+	    cout &lt;&lt; &quot;\t&quot; &lt;&lt; i-&gt;first &lt;&lt; &quot;\t&quot; &lt;&lt; i-&gt;second &lt;&lt; endl;
+	}
 </PRE>
 
 <H3>Adding the document to the database</H3>
@@ -342,238 +332,193 @@ the <A HREF="userman.html">user manual</A>.
 </P>
 
 <HR>
-<H2><A NAME="searcher">An example searcher</A></H2>
+<H2>The indexing script</H2>
+
+We've now seen the program which controls the indexing.  It's now time
+to look at the indexing script itself, in indexfile.xml.
+
+<H3>The file format</H3>
 
 <P>
-The code for this example is also in the examples package, in
-the &quot;<CODE>simple</CODE>&quot; subdirectory.  An HTML formatted
-version is available <A HREF="simplesearch.cc.html">here</A>.
-</P>
-<P>
-The &quot;searcher&quot; presented here is, like the &quot;indexer&quot;,
-simply a small command line driven program.  It takes a path to a database
-and some search terms, performs a probabilistic search for documents
-represented by those terms and displays a ranked list of matching documents.
-</P>
-
-<H3>Setting up</H3>
-
-<P>
-Just like &quot;simpleindex&quot;, we have a single-function example.
-So we include the Muscat header file, and begin:
-</P>
-<PRE>
-    #include &lt;om/om.h&gt;
-
-    int main(int argc, char *argv[])
-    {
-</PRE>
-
-<H3>Options parsing</H3>
-<P>
-Again, we are going to use no special options, and have a very simple
-command line syntax:
-<UL><LI>
-<B>Parameter 1</B> - the (possibly relative) path to the database.
-</LI><LI>
-<B>Parameters 2 onward</B> - the terms to be searched for in the database.
-</LI></UL>
+The file format is described by the XML DTD omindexer.dtd, which should
+be installed with the Open Muscat library.  At the time of writing there
+are no graphical or other tools to generate indexer descriptions - it
+must be written by hand.  In future this should no longer be the case.
 </P><P>
-The validity of a command line can therefore be checked very simply by
-ensuring that there are at least 2 parameters:
-</P>
-<PRE>
-    if(argc &lt; 3) {
-        cout &lt;&lt; "usage: " &lt;&lt; argv[0] &lt;&lt;
-                " &lt;path to database&gt; &lt;search terms&gt;" &lt;&lt; endl;
-        exit(1);
-    }
-</PRE>
+We'll go through the part of the indexer responsible for generating the
+terms, without describing the parts which generate the keys and data
+field.
 </P>
 
-<H3>Catching exceptions</H3>
-<P>
-Again, this is performed just as it was for the simple indexer.
-</P>
+<H3>The basic XML skeleton</H3>
+
+An indexer XML description will always start with a tag identifying the
+version of XML being used, and the rest will be enclosed in a top-level
+<CODE>&lt;omindexer&gt;</CODE> tag:
+
 <PRE>
-    try {
-        <B>[code which accesses Muscat]</B>
-    }
-    catch(OmError &amp; error) {
-        cout &lt;&lt; "Exception: " &lt;&lt; error.get_msg() &lt;&lt; endl;
-    }
+&lt;?xml version=&quot;1.0&quot;?&gt;
+&lt;omindexer&gt;
+  ...
+&lt;/omindexer&gt;
 </PRE>
 
-<H3>Specifying the databases</H3>
-<P>
-Muscat has the ability to search over many databases simultaneously,
-possibly even with the databases distributed across a network of machines.
-Each database can be in its own format, so, for example, we might have a
-system searching across two DA databases and a sleepycat database.
-</P>
-<P>
-This means that, when we are preparing to search, we create an
-OmDatabase object, and give it a set of parameters to specify
-databases by successively calling the
-<CODE>OmDatabase::add_database()</CODE> method.
-The parameters given to this method are the same as those which would be
-used in the constructor of an <CODE>OmWritableDatabase</CODE> to write
-to the database.
-</P>
-<PRE>
-    OmDatabase databases;
-    OmSettings db_parameters;
-    db_parameters.set("backend", "sleepycat");
-    db_parameters.set("sleepycat_dir", argv[1]);
-    databases.add_database(db_parameters);
-</PRE>
-<P>
-You can also just pass the parameters to the <CODE>OmDatabase</CODE>
-constructor, which is a handy shortcut if you only want to search one database:
-</P>
-<PRE>
-    OmSettings db_parameters;
-    db_parameters.set("backend", "sleepycat");
-    db_parameters.set("sleepycat_dir", argv[1]);
-    OmDatabase db(db_parameters);
-</PRE>
-
-<H3>Starting an enquire session</H3>
-<P>
-All searches across databases by Muscat are performed within the context of
-an &quot;<EM>Enquire</EM>&quot; session.  This session is represented by an
-<CODE>OmEnquire</CODE> object, and is across a specified collection of
-databases.  To change the database collection, it is neccessary to open a
-new enquire session, by creating a new <CODE>OmEnquire</CODE> object.
-<PRE>
-    OmEnquire enquire(databases);
-</PRE>
-</P>
-<P>
-An enquire session is also the context within which all other database
-reading operations, such as query expansion and reading the data associated
-with a document, are performed.
-</P>
-
-<H3>Preparing to search</H3>
+<H3>The splitter node</H3>
 
 <P>
-We are going to use all command line parameters from the second onward
-as terms to search for in the database.  For convenience, we shall store
-them in an STL vector.  This is probably the point at which we would want
-to apply a stemming algorithm, or any other desired normalisation and
-conversion operation, to the terms.
-<PRE>
-    vector&lt;om_termname&gt; queryterms;
-    for (int optpos = 2; optpos &lt; argc; optpos++) {
-        queryterms.push_back(argv[optpos]);
-    }
-</PRE>
+One of the basic nodes available is the <CODE>omsplitter</CODE> node.
+It has one input (in) and two outputs (left, right), and simply
+duplicates the input and provides a copy on each output.  This is an
+important node, since it lets the indexer do two different things
+with the same piece of data.
+</P><P>
+The top node in this indexer is an <CODE>omsplitter</CODE> which
+connects to the special "START" node.  The "START" node has one output,
+which contains the data passed in from <CODE>OmIndexer::set_input()</CODE>.
 </P>
 
-<P>
-Queries are represented within muscat by <CODE>OmQuery</CODE> objects, so
-the next step is to construct one from our query terms.
-By an amazing coincidence, there is a constructor ready to take our vector
-of terms and create an <CODE>OmQuery</CODE> object from it.
 <PRE>
-    OmQuery query(OM_MOP_OR, queryterms.begin(), queryterms.end());
-</PRE>
-</P>
-
-<P>
-You will notice that we had to specify an operation to be performed on
-the terms (the <CODE>OM_MOP_OR</CODE> parameter).  If you're interested,
-MOP stands for &quot;Match OPeration&quot;.  Queries in Muscat are actually
-fairly complex things: a full range of boolean operations can be applied to
-queries to restrict the result set, and probabilistic weightings are then
-applied to order the results by relevance.  By specifying the OR operation,
-we are not performing any boolean restriction, and are performing a
-traditional pure probabilistic search.
-</P>
-
-<P>
-We now print a message out to confirm to the user what the query being
-performed is.  This is done with the <CODE>OmQuery::get_description()</CODE>
-method, which is mainly included for debugging purposes, and displays
-a string representation of the query.
-</P>
-<PRE>
-    cout &lt;&lt; "Performing query `" &lt;&lt;
-         query.get_description() &lt;&lt; "'" &lt;&lt; endl;
-</PRE>
-
-<H3>Performing the search</H3>
-<P>
-Now, we are ready to perform the search.  The first step of this is to
-give the query object to the enquire session.  Note that the query is
-copied at this operation, and that changing the OmQuery object after
-setting the query with it has no effect.
-</P>
-<PRE>
-    enquire.set_query(query);
+    &lt;!-- First make split the filename down two paths --&gt;
+    &lt;node type=&quot;omsplitter&quot; id=&quot;splitfname&quot;&gt;
+        &lt;input name=&quot;in&quot; node=&quot;START&quot; out_name=&quot;out&quot;/&gt;&lt;/node&gt;
 </PRE>
 
 <P>
-Next, we ask for the results of the search.  There is no need to tell
-Muscat to perform the search: it will do this automatically.  We use
-the <CODE>get_mset()</CODE> method to get the results, which are returned
-in an <CODE>OmMSet</CODE> object.  (MSet for Match Set)
-</P>
-<P>
-<CODE>get_mset()</CODE> can take many parameters, such as a set of
-relevant documents to use, and various options to modify the search,
-but we give it the minimum; which is the first document to return (starting
-at 0 for the top ranked document), and the maximum number of documents
-to return (we specify 10 here):
-<PRE>
-    OmMSet matches = enquire.get_mset(0, 10);
-</PRE>
+This specifies a node of type <CODE>omsplitter</CODE>, with id "splitfname".
+The id can be anything, but must be unique in the indexer.  It should be a
+descriptive name.  This node has one input connection, named "in", which is
+connected to the "out" connection of the node with id "START".
 </P>
 
-<H3>Displaying the results of the search</H3>
-<P>
-Finally, we display the results of the search.  The results are stored in
-a container called <CODE>items</CODE> in the <CODE>OmMSet</CODE> object,
-so first we display how many items are in that:
-<PRE>
-    cout &lt;&lt; matches.items.size() &lt;&lt; " results found" &lt;&lt; endl;
-</PRE>
-</P>
+<H3>Reading the file into memory</H3>
 
 <P>
-Now we display some information about each of the items in the
-<CODE>OmMSet</CODE>.  Each of these items is an object of type
-<CODE>OmMSetItem</CODE>, representing a document found by the search:
-<UL><LI>
-First, we display the document ID, stored in the <CODE>did</CODE> field.
-This is not usually very useful information to give to users, but it is
-at least a unique handle on each document.
-</LI><LI>
-Next, we display a &quot;percentage&quot; score for the document.  Readers
-familiar with Information Retrieval will not be surprised to hear that this
-is not really a percentage: it is just a value from 0 to 100, such that a
-more relevant document has a higher value.
-OmEnquire provides a utility method, <CODE>convert_to_percent</CODE> to
-return such a value from an <CODE>OmMSetItem</CODE>, which we use here.
-</LI><LI>
-Last, we display the data associated with each returned document, which
-was specified by the user at database generation time.  To do this, we
-first use the <CODE>OmEnquire::get_doc()</CODE> method, to get an
-<CODE>OmDocument</CODE> object representing the returned document, and
-then we use the <CODE>get_data()</CODE> method of this object to get
-access to the data stored in this document.
-</LI></UL>
-<PRE>
-    vector&lt;OmMSetItem&gt;::const_iterator i;
-    for (i = matches.items.begin(); i != matches.items.end(); i++) {
-        cout &lt;&lt; "Document ID " &lt;&lt; i-&gt;did &lt;&lt; "\t";
-	cout &lt;&lt; matches.convert_to_percent(*i) &lt;&lt; "% ";
-        OmDocument doc = enquire.get_doc(*i);
-	cout &lt;&lt; "[" &lt;&lt; doc.get_data().value &lt;&lt; "]" &lt;&lt; endl;
-    }
-</PRE>
+Before the terms can be extracted from the file, it must be loaded into
+memory.  This is done by an <CODE>omfilereader</CODE> node.  The node
+has one input, "filename", which should be the path to the file to open.
+The file is read into memory, and written to the "out" connection.
 </P>
+
+<PRE>
+    &lt;!-- In the left path, read the file into memory --&gt;
+    &lt;node type=&quot;omfilereader&quot; id=&quot;readfile&quot;&gt;
+        &lt;input name=&quot;filename&quot; node=&quot;splitfname&quot; out_name=&quot;left&quot;/&gt;&lt;/node&gt;
+</PRE>
+
+<H3>Splitting the file into words</H3>
+
+<P>
+The next thing to do is to split the contents of the file into words.
+This is done by an <CODE>omregexsplit</CODE> node.  It takes a string
+at input "in", and splits it into a list of smaller strings.  The
+boundary is described by a POSIX regular expression, specified as a
+configuration parameter named "regex".
+</P><P>
+The regular expression used here is "[^a-zA-Z]\+", which matches any
+non-zero string of non-letters.  The result of the split will
+therefore be a list of all the sequences of letters from the input
+string.
+</P>
+
+<PRE>
+    &lt;!-- Split the file into &quot;words&quot; --&gt;
+    &lt;node type=&quot;omregexsplit&quot; id=&quot;wordsplit&quot;&gt;
+        &lt;param name=&quot;regex&quot; type=&quot;string&quot; value=&quot;[^a-zA-Z]\+&quot;/&gt;
+        &lt;input name=&quot;in&quot; node=&quot;readfile&quot; out_name=&quot;out&quot;/&gt;&lt;/node&gt;
+</PRE>
+
+<!--
+    &lt;!-- Duplicate the list of words --&gt;
+    &lt;node type=&quot;omsplitter&quot; id=&quot;dupwords&quot;&gt;
+        &lt;input name=&quot;in&quot; node=&quot;wordsplit&quot; out_name=&quot;out&quot;/&gt;&lt;/node&gt;
+    &lt;!-- Left branch, separate capital words --&gt;
+    &lt;node type=&quot;omregexfilter&quot; id=&quot;capsonly&quot;&gt;
+        &lt;param name=&quot;regex&quot; type=&quot;string&quot; value=&quot;^[A-Z]&quot;/&gt;
+	&lt;input name=&quot;in&quot; node=&quot;dupwords&quot; out_name=&quot;left&quot;/&gt;&lt;/node&gt;
+    &lt;node type=&quot;omtranslatelist&quot; id=&quot;lowercaps&quot;&gt;
+        &lt;param name=&quot;from&quot; type=&quot;string&quot; value=&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;/&gt;
+        &lt;param name=&quot;to&quot; type=&quot;string&quot; value=&quot;abcdefghijklmnopqrstuvwxyz&quot;/&gt;
+	&lt;input name=&quot;in&quot; node=&quot;capsonly&quot; out_name=&quot;out&quot;/&gt;&lt;/node&gt;
+    &lt;!-- Right branch, lower case everything... --&gt;
+    &lt;node type=&quot;omtranslatelist&quot; id=&quot;tolower&quot;&gt;
+        &lt;param name=&quot;from&quot; type=&quot;string&quot; value=&quot;ABCDEFGHIJKLMNOPQRSTUVWXYZ&quot;/&gt;
+        &lt;param name=&quot;to&quot; type=&quot;string&quot; value=&quot;abcdefghijklmnopqrstuvwxyz&quot;/&gt;
+	&lt;input name=&quot;in&quot; node=&quot;dupwords&quot; out_name=&quot;right&quot;/&gt;&lt;/node&gt;
+    &lt;!-- ... and stem --&gt;
+    &lt;node type=&quot;omstemmer&quot; id=&quot;stem&quot;&gt;
+        &lt;param name=&quot;language&quot; type=&quot;string&quot; value=&quot;english&quot;/&gt;
+	&lt;input name=&quot;in&quot; node=&quot;tolower&quot; out_name=&quot;out&quot;/&gt;&lt;/node&gt;
+    &lt;!-- Now merge the two lists of terms --&gt;
+    &lt;node type=&quot;omlistconcat&quot; id=&quot;terms&quot;&gt;
+        &lt;input name=&quot;left&quot; node=&quot;lowercaps&quot; out_name=&quot;out&quot;/&gt;
+	&lt;input name=&quot;right&quot; node=&quot;stem&quot; out_name=&quot;out&quot;/&gt;&lt;/node&gt;
+
+    &lt;!-- convert the terms into a termlist --&gt;
+    &lt;node type=&quot;omnewtermlist&quot; id=&quot;maketermlist&quot;&gt;&lt;/node&gt;
+    &lt;node type=&quot;omtermlistadd&quot; id=&quot;addtermlist&quot;&gt;
+        &lt;input name=&quot;termlist&quot; node=&quot;maketermlist&quot; out_name=&quot;out&quot;/&gt;
+	&lt;input name=&quot;words&quot; node=&quot;terms&quot; out_name=&quot;out&quot;/&gt;&lt;/node&gt;
+
+    &lt;!-- Right branch from splitfname --&gt;
+    &lt;!-- Split the filename again --&gt;
+    &lt;node type=&quot;omsplitter&quot; id=&quot;splitfname2&quot;&gt;
+        &lt;input name=&quot;in&quot; node=&quot;splitfname&quot; out_name=&quot;right&quot;/&gt;&lt;/node&gt;
+    &lt;node type=&quot;omsplitter&quot; id=&quot;splitfname3&quot;&gt;
+        &lt;input name=&quot;in&quot; node=&quot;splitfname2&quot; out_name=&quot;right&quot;/&gt;&lt;/node&gt;
+    &lt;!-- extract the filename --&gt;
+    &lt;node type=&quot;omregexreplace&quot; id=&quot;filenameonly&quot;&gt;
+        &lt;param name=&quot;regex&quot; type=&quot;string&quot; value=&quot;^(.*/)?([^/]+)$&quot;/&gt;
+        &lt;param name=&quot;replace_expr&quot; type=&quot;string&quot; value=&quot;\2&quot;/&gt;
+	&lt;input name=&quot;in&quot; node=&quot;splitfname2&quot; out_name=&quot;left&quot;/&gt;&lt;/node&gt;
+    &lt;!-- prefix the filename with &quot;F&quot; --&gt;
+    &lt;node type=&quot;omprefix&quot; id=&quot;prefixF&quot;&gt;
+        &lt;param name=&quot;prefix&quot; type=&quot;string&quot; value=&quot;F&quot;/&gt;
+	&lt;input name=&quot;in&quot; node=&quot;filenameonly&quot; out_name=&quot;out&quot;/&gt;&lt;/node&gt;
+    &lt;!-- add into termlist --&gt;
+    &lt;node type=&quot;omtermlistaddone&quot; id=&quot;addfilename&quot;&gt;
+        &lt;input name=&quot;termlist&quot; node=&quot;addtermlist&quot; out_name=&quot;out&quot;/&gt;
+	&lt;input name=&quot;words&quot; node=&quot;prefixF&quot; out_name=&quot;out&quot;/&gt;&lt;/node&gt;
+
+    &lt;!-- handle the keys: make a new keylist --&gt;
+    &lt;node type=&quot;omnewkeylist&quot; id=&quot;newkey&quot;&gt;&lt;/node&gt;
+    &lt;!-- split the filename into directory and name --&gt;
+    &lt;node type=&quot;omregexmatch&quot; id=&quot;splitdir&quot;&gt;
+        &lt;param name=&quot;regex&quot; type=&quot;string&quot;&gt;\(.*/\)\?\([^/]*\)$&lt;/param&gt;
+    	&lt;input name=&quot;in&quot; node=&quot;splitfname3&quot; out_name=&quot;left&quot;/&gt;&lt;/node&gt;
+    &lt;!-- Select the submatches, dropping the whole filename --&gt;
+    &lt;node type=&quot;omselectitems&quot; id=&quot;selectsubs&quot;&gt;
+        &lt;param name=&quot;items&quot; type=&quot;list&quot;&gt;
+	    &lt;item value=&quot;1&quot;/&gt;
+	    &lt;item value=&quot;2&quot;/&gt;&lt;/param&gt;
+	&lt;input name=&quot;in&quot; node=&quot;splitdir&quot; out_name=&quot;out&quot;/&gt;&lt;/node&gt;
+
+    &lt;!-- Generate the key numbers --&gt;
+    &lt;node type=&quot;ommakerange&quot; id=&quot;keyrange&quot;&gt;
+        &lt;param name=&quot;first&quot; type=&quot;string&quot; value=&quot;1&quot;/&gt;
+        &lt;param name=&quot;step&quot; type=&quot;string&quot; value=&quot;1&quot;/&gt;
+        &lt;param name=&quot;count&quot; type=&quot;string&quot; value=&quot;2&quot;/&gt;&lt;/node&gt;
+    &lt;!-- pair the key numbers with the key values --&gt;
+    &lt;node type=&quot;ommakepairs&quot; id=&quot;keypairs&quot;&gt;
+        &lt;input name=&quot;left&quot; node=&quot;keyrange&quot; out_name=&quot;out&quot;/&gt;
+        &lt;input name=&quot;right&quot; node=&quot;selectsubs&quot; out_name=&quot;out&quot;/&gt;&lt;/node&gt;
+
+    &lt;!-- add the key to the list --&gt;
+    &lt;node type=&quot;omkeylistadd&quot; id=&quot;addkeys&quot;&gt;
+    	&lt;input name=&quot;keylist&quot; node=&quot;newkey&quot; out_name=&quot;out&quot;/&gt;
+	&lt;input name=&quot;keys&quot; node=&quot;keypairs&quot; out_name=&quot;out&quot;/&gt;&lt;/node&gt;
+
+    &lt;!-- join everything into the final document --&gt;
+    &lt;node type=&quot;ommakedoc&quot; id=&quot;doc&quot;&gt;
+        &lt;input name=&quot;terms&quot; node=&quot;addfilename&quot; out_name=&quot;out&quot;/&gt;
+	&lt;input name=&quot;data&quot; node=&quot;splitfname3&quot; out_name=&quot;right&quot;/&gt;
+	&lt;input name=&quot;keys&quot; node=&quot;addkeys&quot; out_name=&quot;out&quot;/&gt;&lt;/node&gt;
+
+    &lt;!-- specify the output --&gt;
+    &lt;output node=&quot;doc&quot; out_name=&quot;out&quot;/&gt;
+</PRE>
+-->
+
+<!-- FIXME: below is still from the original quickstart.html -->
 
 <HR>
 <H2>Compiling</H2>
